k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: p7vc-crm
  labels:
    app.kubernetes.io/managed-by: opsera
    environment: dev
