k8s/04-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: p7vc-crm-api-svc
  namespace: p7vc-crm
  labels:
    app: p7vc-crm-api
spec:
  selector:
    app: p7vc-crm-api
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
