k8s/06-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: p7vc-crm-frontend-svc
  namespace: p7vc-crm
  labels:
    app: p7vc-crm-frontend
spec:
  selector:
    app: p7vc-crm-frontend
  ports:
    - name: http
      port: 3001
      targetPort: 3001
      protocol: TCP
  type: ClusterIP
